added cars app and fetched data into homepage

--- a/templates/includes/topbar.html
+++ b/templates/includes/topbar.html
@@ -4,8 +4,8 @@
         <div class="row">
             <div class="col-lg-8 col-md-8 col-sm-7">
                 <div class="list-inline">
-                    <a href="tel:+84-3XX-436-1705"><i class="fa fa-phone"></i>+84-3XX-436-1705</a>
-                    <a href="tel:info@carhouse.com"><i class="fa fa-envelope"></i>info@carhouse.com</a>
+                    <a href="tel:+84-3XX-436-1705"><i class="fa fa-phone"></i>+84-379-436-1705</a>
+                    <a href="tel:info@carhouse.com"><i class="fa fa-envelope"></i>contact@carhouse.com</a>
                     <a href="tel:info@carhouse.com"><i class="fa fa-clock-o"></i>Mon - Sun: 8:00am - 8:00pm</a>
                 </div>
             </div>
