--- a/templates/greetings/home.html
+++ b/templates/greetings/home.html
@@ -39,52 +39,41 @@
         </div>
         <!-- Search box 3 start -->
         <div class="search-box-4 sb-8">
-            <form action="#" method="">
+            <form action="{% url 'search' %}" method="">
                 <div class="form-group">
                     <input type="text" name="keyword" placeholder="Search by name" class="form-control">
                 </div>
+               
                 <div class="form-group">
-                    <select class="form-control search-fields" name="select-brand">
-                        <option selected="true" disabled="disabled">Brand</option>
-                        <option>Audi</option>
-                        <option>BMW</option>
-                        <option>Honda</option>
-                        <option>Nissan</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <select class="form-control search-fields" name="select-make">
+                    <select class="form-control search-fields" name="model">
                         <option selected="true" disabled="disabled">Model</option>
-                        <option>BMW</option>
-                        <option>Honda</option>
-                        <option>Lamborghini Huracán</option>
-                        <option>Sports Car</option>
+                        {% for model in model_search %}     <!--utilisation de 'model' au lieu de 'model.model' car la boucle est lancee dans 1 liste et non 1 dict(model_search), pour ne afficher de facon uniq les data dans la barre de recherc du formulaire-->
+                            <option value="{{model}}">{{model}}</option>
+                        {% endfor %}
                     </select>
                 </div>
                 <div class="form-group">
-                    <select class="form-control search-fields" name="select-location">
+                    <select class="form-control search-fields" name="city">
                         <option selected="true" disabled="disabled">Location</option>
-                        <option>United States</option>
-                        <option>United Kingdom</option>
+                        {% for city in city_search %}
+                            <option value="{{city}}">{{city}}</option>
+                        {% endfor %}
                     </select>
                 </div>
                 <div class="form-group">
-                    <select class="form-control search-fields" name="select-year">
+                    <select class="form-control search-fields" name="year">
                         <option selected="true" disabled="disabled">Year</option>
-                        <option>2016</option>
-                        <option>2017</option>
-                        <option>2018</option>
-                        <option>2019</option>
+                        {% for year in year_search %}    
+                            <option value="{{year}}">{{year}}</option>
+                        {% endfor %}
                     </select>
                 </div>
                 <div class="form-group">
-                    <select class="form-control search-fields" name="select-type">
+                    <select class="form-control search-fields" name="body_style">
                         <option selected="true" disabled="disabled">Select Type Of Car</option>
-                        <option>Sedan</option>
-                        <option>Sports</option>
-                        <option>Hatchback</option>
-                        <option>Pickup Truck</option>
-                        <option>SUV</option>
+                        {% for body_style in body_style_search %}
+                            <option value="{{body_style}}">{{body_style}}</option>
+                        {% endfor %}
                     </select>
                 </div>
                 <div class="range-slider clearfix">
@@ -131,7 +120,7 @@
                 <div class="slick-slide-item">
                     <div class="car-box-3">
                         <div class="car-thumbnail">
-                            <a href="car-details.html" class="car-img">
+                            <a href="{% url 'car_detail' cars.id %}" class="car-img">
                                 <div class="tag-2">Featured</div>
                                 <div class="price-box">
                                     <span>${{cars.price | intcomma}}</span>
@@ -146,24 +135,29 @@
                                                 <i class="fa fa-expand"></i>
                                                 <img class="hidden" src="{{cars.car_photo.url}}">
                                             </a>
-                                            {% if car.car_photo_1 %}
+                                            {% if cars.car_photo_1 %}
                                             <a href="{{cars.car_photo_1.url}}" class="hidden">
                                                 <img class="hidden" src="{{cars.car_photo_1.url}}">
                                             </a>
                                             {% endif %}
-                                            {% if car.car_photo_2 %}
+                                            {% if cars.car_photo_2 %}
                                             <a href="{{cars.car_photo_2.url}}" class="hidden">
                                                 <img class="hidden" src="{{cars.car_photo_2.url}}">
                                             </a>
                                             {% endif %}
-                                            {% if car.car_photo_3 %}
+                                            {% if cars.car_photo_3 %}
                                             <a href="{{cars.car_photo_3.url}}" class="hidden">
                                                 <img class="hidden" src="{{cars.car_photo_3.url}}">
                                             </a>
                                             {% endif %}
-                                            {% if car.car_photo_4 %}
+                                            {% if cars.car_photo_4 %}
                                             <a href="{{cars.car_photo_4.url}}" class="hidden">
                                                 <img class="hidden" src="{{cars.car_photo_4.url}}">
+                                            </a>
+                                            {% endif %}
+                                            {% if cars.car_photo_5 %}
+                                            <a href="{{cars.car_photo_5.url}}" class="hidden">
+                                                <img class="hidden" src="{{cars.car_photo_5.url}}">
                                             </a>
                                             {% endif %}
                                         </div>
@@ -173,10 +167,10 @@
                         </div>
                         <div class="detail">
                             <h1 class="title">
-                                <a href="car-details.html">{{ cars.car_title }}</a>
+                                <a href="{% url 'car_detail' cars.id %}">{{cars.car_title}}</a>
                             </h1>
                             <div class="location">
-                                <a href="car-details.html">
+                                <a href="{% url 'car_detail' cars.id %}">
                                     <i class="flaticon-pin"></i>{{cars.state}}, {{cars.city}}
                                 </a>
                             </div>
@@ -220,7 +214,7 @@
             <div class="col-lg-4 col-md-6">
                 <div class="car-box">
                     <div class="car-thumbnail">
-                        <a href="car-details.html" class="car-img">
+                        <a href="{% url 'car_detail' car.id %}" class="car-img">
                             <div class="tag">For Sale</div>
                             <img class="d-block w-100" src="{{car.car_photo.url}}" alt="car" style="min-height: 250px; max-height: 250px;">
                             <div class="facilities-list clearfix">
@@ -265,6 +259,11 @@
                                             <img class="hidden" src="{{car.car_photo_4.url}}">
                                         </a>
                                         {% endif %}
+                                        {% if cars.car_photo_5 %}
+                                        <a href="{{cars.car_photo_5.url}}" class="hidden">
+                                            <img class="hidden" src="{{cars.car_photo_5.url}}">
+                                        </a>
+                                        {% endif %}
                                     </div>
                                 </div>
                             </div>
@@ -272,10 +271,10 @@
                     </div>
                     <div class="detail">
                         <h1 class="title">
-                            <a href="car-details.html">{{car.car_title}}</a>
+                            <a href="{% url 'car_detail' car.id %}">{{car.car_title}}</a>
                         </h1>
                         <div class="location">
-                            <a href="car-details.html">
+                            <a href="{% url 'car_detail' car.id %}">
                                 <i class="flaticon-pin"></i>{{car.state}}, {{car.city}}
                             </a>
                         </div>
@@ -350,7 +349,6 @@
     </div>
 </div>
 <!-- Intro section end -->
-
 
 
 
